<resources>
    <!-- App -->
    <string name="app_name">MC Video</string>
    <string name="app_server_url">https://videocontrol.itsoverkodi.com</string>
    <string name="app_tagline">Instant video conferences with your family, friends, and colleagues</string>
    <string name="app_feedback_contact_email">support@deliverate.co.uk</string>
    <string name="app_privacy_policy_url">https://www.mommacherrisoulfood.com/privacy//</string>
    <string name="app_terms_of_service_url">https://www.mommacherrisoulfood.com/terms-and-conditions/</string>

    <!-- AdMob -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id_meeting_history">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id_create_meeting">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_id_join_meeting">ca-app-pub-3940256099942544/1033173712</string>

    <string name="app_intro_meeting_title">Meet with Momma</string>
    <string name="app_intro_meeting_desc">Create or join a video chat with MommaCherri</string>
    <string name="app_intro_chat_title">Cook with Momma</string>
    <string name="app_intro_chat_desc">Learn a new cooking style with tricks from MommaCherri</string>
    <string name="app_intro_meeting_history_title">Live with Momma</string>
    <string name="app_intro_meeting_history_desc">Relish your meal and enhance your lifestyle with tips from MommaCherri</string>

    <string name="authentication_sign_in_email">Sign in with Email</string>
    <string name="authentication_sign_in_google">Sign in with Google</string>
    <string name="authentication_login_canceled">Sign in canceled</string>

    <string name="main_join_meeting">Join Meeting</string>
    <string name="main_create_meeting">Create Meeting</string>
    <string name="main_meeting_code">Meeting Code</string>
    <string name="main_btn_create_meeting">CREATE</string>
    <string name="main_enter_meeting_code">Enter Meeting Code</string>
    <string name="main_btn_join_meeting">JOIN</string>
    <string name="main_error_meeting_code_length">Minimum length of meeting code allowed is %1$d (Spaces are not counted)</string>
    <string name="main_share_meeting_code_title">Share meeting code via</string>
    <string name="main_meeting_code_copied">Meeting Code copied from Clipboard</string>
    <string name="main_empty_clipboard">No Meeting Code found in the Clipboard</string>

    <string name="meeting_history_rejoin">REJOIN</string>
    <string name="meeting_history_last_joined_time">Last joined %1$s</string>
    <string name="meeting_history_toolbar_title">Meeting History</string>
    <string name="meeting_history_delete_meetings">Delete Meetings</string>
    <string name="meeting_history_empty">You haven\'t joined any video meetings yet. Join a meeting from the home screen.</string>
    <string name="meeting_history_meeting_code_copied">Meeting Code copied to Clipboard</string>

    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_user_not_authenticated">User not signed in</string>
    <string name="profile_dark_mode">Dark Mode</string>
    <string name="profile_send_feedback">Send us a feedback</string>
    <string name="profile_rate_app">Rate app on Google Play</string>
    <string name="profile_share_app">Share app</string>
    <string name="profile_dot_separator">\u2022</string>
    <string name="profile_feedback_email_subject">Feedback - MCVideo</string>
    <string name="profile_share_app_title">Share app via</string>
    <string name="profile_share_app_text">Download Mommas Cherri Video, do instant video calls and learn how to cook with MommaCherri. \n\nhttps://play.google.com/store/apps/details?id=%1$s</string>
    <string name="profile_open_source_licenses">Open Source Licenses</string>

    <string name="all_skip">Skip</string>
    <string name="all_error_internet_connectivity">Please check your internet connectivity and try  again</string>
    <string name="all_error_unknown">Unknown error occurred. Please try again</string>
    <string name="all_btn_sign_out">SIGN OUT</string>
    <string name="all_btn_sign_in">SIGN IN</string>
    <string name="all_privacy_policy">Privacy Policy</string>
    <string name="all_terms_of_service">Terms of Service</string>
    <string name="all_creating_meeting">Please wait, creating meeting</string>
    <string name="all_joining_meeting">Please wait, joining meeting</string>
    <string name="all_rejoining_meeting">Please wait, rejoining meeting</string>
    <string name="all_unauthenticated_user_name">%1$s</string>
    <string name="dummy"> </string>
    <string name="all_faqs">FAQs</string>

    <string name="faqs_meeting_code_title">Meeting Code</string>
    <string name="faqs_custom_meeting_code_title">Custom Meeting Code</string>
    <string name="faqs_end_meeting_title">End Meeting</string>
    <string name="faqs_password_protection_title">Password Protection</string>
    <string name="faqs_meeting_code_desc">The meeting code must be at least 10 digits long. Kindly note that the spaces in the meeting code are automatically removed and not considered while calculating the meeting code length. The Meeting code is not case sensitive. For example, the meeting codes ForthComingJournalismsBook and FORTHCOMINGJOURNALISMSBOOK will start the same meeting.</string>
    <string name="faqs_custom_meeting_code_desc">Instead of using the auto-generated meeting code, you can use your own custom meeting code. It needs to be an alphanumeric code with a length of at least 10 digits. Some examples of valid meeting codes are LatterCritiquesClassifyAlways, HugePersonalitiesSlipNext8745, ForthComingJournalismsBook, etc. Just make sure the meeting code is long enough so that the possibility of some random uninvited people joining the meeting is extremely low.</string>
    <string name="faqs_end_meeting_desc">A meeting gets created when the first participant joins and is automatically ended when the last one leaves. If someone joins the meeting with the same meeting code again, a brand new meeting is created with the same name and there is no connection to any previous meeting that might have been held with the same name.</string>
    <string name="faqs_password_protection_desc">You can always password protect the meeting once it has started. However, keep in mind that the password will be reset once the meeting is ended. So make sure to set the password again if a meeting is rejoined after it was ended.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_name">Enter name</string>
    <string name="choose_name">Choose name</string>
    <string name="enter_name_error">Please enter a name</string>
    <string name="choose_a_charc">Choose character</string>
    <string name="clipboard">Copy to clipboard</string>
</resources>
