<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:foregroundTint="#FFFFFF"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupJoinMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivJoinMeeting, cvCodeJoinMeeting, llBtnJoinMeeting" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivCreateMeeting, tilCodeCreateMeeting, llBtnCreateMeeting" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMeetingHistory"
                style="@style/ClickableImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_history" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                style="@style/ClickableImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tgMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_44sdp"
        app:checkedButton="@id/btnToggleJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnToggleJoinMeeting"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_join_meeting"
            android:textColorHighlight="#FF5722"
            android:textColorLink="#FF5722"
            app:rippleColor="#FF5722"
            app:strokeColor="#FF5722" />

        <Button
            android:id="@+id/btnToggleCreateMeeting"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_create_meeting"
            android:textColorHighlight="#FF5722"
            android:textColorLink="#FF5722"
            app:rippleColor="#FF5722"
            app:strokeColor="#FF5722" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivJoinMeeting"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/cvCodeJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/mc_logo"
        tools:srcCompat="@drawable/mc_logo" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cvCodeJoinMeeting"
        style="@style/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_56sdp"
        android:layout_marginEnd="24dp"

        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/ivJoinMeeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBtnJoinMeeting">

        <FrameLayout
            android:id="@+id/llCodeJoinMeeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/et_meeting_code_border"
            android:gravity="left"
            android:padding="@dimen/_4sdp">

            <EditText
                style="@style/editText"
                android:id="@+id/etCodeJoinMeeting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/main_enter_meeting_code"
                android:background="@color/whiteColor"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/ivClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clipboard"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/_5sdp"
                android:contentDescription="@string/clipboard" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llBtnJoinMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_54sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCodeJoinMeeting">

    <TextView
        android:id="@+id/btnJoinMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/btn_join_background_ripple"
        android:text="@string/main_btn_join_meeting"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateMeeting"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tilCodeCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/mc_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodeCreateMeeting"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_56sdp"
        android:layout_marginEnd="24dp"
        android:hint="@string/main_meeting_code"
        app:boxStrokeColor="#FF5722"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_share"
        app:endIconMode="custom"
        app:endIconTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/llBtnCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCreateMeeting"
        app:startIconTint="#FF5722">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodeCreateMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llBtnCreateMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_54sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeCreateMeeting"
        >

    <TextView
        android:id="@+id/btnCreateMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/btn_join_background_ripple"
        android:text="@string/main_btn_create_meeting"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeCreateMeeting"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>